--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,18 @@ click==8.1.3
 coverage==7.0.0
 exceptiongroup==1.0.4
 fastapi==0.88.0
+flake8==6.0.0
 h11==0.14.0
 idna==3.4
 importlib-metadata==5.2.0
 iniconfig==1.1.1
+mccabe==0.7.0
 packaging==22.0
 pluggy==1.0.0
+psycopg2==2.9.5
+pycodestyle==2.10.0
 pydantic==1.10.2
+pyflakes==3.0.1
 pytest==7.2.0
 python-dotenv==0.21.0
 sniffio==1.3.0
