Added script for loading data to db

--- a/yoyo.ini
+++ b/yoyo.ini
@@ -1,5 +1,5 @@
 [DEFAULT]
-sources = %(here)s/src/database/migrations
+sources = ./src/database/migrations
 editor = /bin/nano {}
 batch_mode = on
-verbosity = 3
+verbosity = 2
