--- a/.env.prod
+++ b/.env.prod
@@ -8,3 +8,8 @@ POSTGRES_HOST=database
 POSTGRES_USER=db_admin
 POSTGRES_PASSWORD=qwerty
 POSTGRES_DB=text_searcher
+
+ELASTICSEARCH_PORT=9200
+ELASTICSEARCH_HOST=elasticsearch
+
+KIBANA_PORT=5601
