--- a/.env.dist
+++ b/.env.dist
@@ -8,3 +8,8 @@ POSTGRES_HOST=localhost
 POSTGRES_USER=db_admin
 POSTGRES_PASSWORD=qwerty
 POSTGRES_DB=text_searcher
+
+ELASTICSEARCH_PORT=61000
+ELASTICSEARCH_HOST=localhost
+
+KIBANA_PORT=62000
