--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,8 +7,18 @@ services:
       - "${POSTGRES_PORT}:5432"
     env_file:
       - .env.dist
-    volumes:
-      - dev_database:/var/lib/postgresql/data/
-
-volumes:
-  dev_database:
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.5.3
+    environment:
+      - xpack.security.enabled=false
+      - "discovery.type=single-node"
+    ports:
+      - "${ELASTICSEARCH_PORT}:9200"
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.5.3
+    ports:
+      - "${KIBANA_PORT}:5601"
+    environment:
+      ELASTICSEARCH_HOSTS: '["http://elasticsearch:9200"]'
+    depends_on:
+      - elasticsearch
