--- a/requirements.txt
+++ b/requirements.txt
@@ -19,14 +19,18 @@ idna==3.4
 importlib-metadata==5.2.0
 iniconfig==1.1.1
 mccabe==0.7.0
+mirakuru==2.4.2
 multidict==6.0.3
 packaging==22.0
 pluggy==1.0.0
+port-for==0.6.3
+psutil==5.9.4
 psycopg2==2.9.5
 pycodestyle==2.10.0
 pydantic==1.10.2
 pyflakes==3.0.1
 pytest==7.2.0
+pytest-asyncio==0.20.3
 python-dotenv==0.21.0
 sniffio==1.3.0
 sqlparse==0.4.3
