Added Dockerfile, docker compose, refactored shell scripts

--- a/.env.prod
+++ b/.env.prod
@@ -1,7 +1,8 @@
-MIGRATION_ENV_FILE=.env.prod
+MIGRATION_ENV_FILE=.env
 
-HOST=127.0.0.1
-PORT=8000
+HOST=0.0.0.0
+PORT=8888
+DEBUG=0
 
 POSTGRES_PORT=5432
 POSTGRES_HOST=database
