--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - 'README.md'
+
 
 jobs:
   test_shell_scripts:
@@ -16,12 +19,17 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          installer-parallel: true
+          virtualenvs-create: true
+          virtualenvs-in-project: true
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+        run: poetry install --no-interaction
       - name: Run shell scripts
         run: |
+          . .venv/bin/activate
           ./scripts/start_env.sh -d
           sleep 15
           ./scripts/migration.sh apply
@@ -32,7 +40,6 @@ jobs:
   test_app:
     name: Test FastAPI application
     runs-on: ubuntu-latest
-    needs: [ test_shell_scripts ]
     steps:
       - name: Checkout main
         uses: actions/checkout@v3
@@ -40,16 +47,29 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          installer-parallel: true
+          virtualenvs-create: true
+          virtualenvs-in-project: true
       - name: Install dependencies
+        run: poetry install --no-interaction
+      - name: Run flake8 & pytest
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Run flake8
-        run: flake8
-      - name: Run pytest
-        run: |
+          . .venv/bin/activate
+          flake8
           ./scripts/start_env.sh -d
-          sleep 15
           cd src/
+          sleep 15
           pytest
-          
+
+  test_docker:
+    name: Test Docker image build
+    runs-on: ubuntu-latest
+    needs: [ test_app ]
+    steps:
+      - name: Checkout main
+        uses: actions/checkout@v3
+      - name: Docker image build
+        run: docker build .
